@@ -120,13 +120,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) proxy_wstunnel: Restore ability to process other Upgrade: protocols which was
-     blocked in r1674632/r1674661.
-     trunk patch: http://svn.apache.org/r1792092
-                  http://svn.apache.org/r1796864
-     2.4.x patch: svn merge -c  1792092,1796864 ^/httpd/httpd/trunk .
-     +1: covener, jim, ylavic
-
   *) worker, prefork: save some cycles by not copying the listener's pollfds
                       for each pollset operation
      trunk patch: http://svn.apache.org/r1662437
